feat(chart): バージョンを0.1.2に更新
- Chart.yamlのバージョンを0.1.2に更新
- cronjob.yamlのmc-config-volumeのreadOnlyをfalseに変更
- valuie.oky.yamlのイメージタグを"RELEASE.2025-05-21T01-59-54Z-cpuv1"に設定

--- a/charts/templates/cronjob.yaml
+++ b/charts/templates/cronjob.yaml
@@ -42,7 +42,7 @@ spec:
             volumeMounts:
             - name: mc-config-volume
               mountPath: "/root/.mc" # mc default config path
-              readOnly: true
+              readOnly: false
             resources:
               {{- toYaml .Values.resources | nindent 14 }}
           volumes:
